2007-11-29  *** Released version 0.8.2

2007-11-25  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Logger.py (Logger.logstop): add a proper logstop()
	method to fully stop the logger, along with a corresponding
	%logstop magic for interactive use.

	* IPython/Extensions/ipy_host_completers.py: added new host
	completers functionality, contributed by Gael Pasgrimaud
	<gawel-AT-afpy.org>.

2007-11-24  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/DPyGetOpt.py (ArgumentError): Apply patch by Paul Mueller
	<gakusei-AT-dakotacom.net>, to fix deprecated string exceptions in
	options handling.  Unicode fix in %whos (committed a while ago)
	was also contributed by Paul.

2007-11-23  Darren Dale <darren.dale@cornell.edu>
        * ipy_traits_completer.py: let traits_completer respect the user's
        readline_omit__names setting.

2007-11-08  Ville Vainio  <vivainio@gmail.com>
	* ipy_completers.py (import completer): assume 'xml' module exists.
	Do not add every module twice anymore. Closes #196.

	* ipy_completers.py, ipy_app_completers.py: Add proper apt-get
	completer that uses apt-cache to search for existing packages.

2007-11-06  Ville Vainio  <vivainio@gmail.com>

	* Prompts.py: Do not update _oh and _123 when do_full_cache is not
	true. Closes #194.

2007-11-01  Brian Granger <ellisonbg@gmail.com>

	* iplib.py, rlineimpl.py: Applied Body Water's patches to get IPython
	working with OS X 10.5 libedit implementation of readline.

2007-10-24  Ville Vainio  <vivainio@gmail.com>

	* iplib.py(user_setup): To route around buggy installations where
	UserConfig is not available, create a minimal _ipython.

	* iplib.py: Unicode fixes from Jorgen.

	* genutils.py: Slist now has new method 'fields()' for extraction of
	whitespace-separated fields from line-oriented data.

2007-10-15  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/OInspect.py (Inspector.pinfo): fix bug that could arise